--- a/src/main/webapp/listPersons.xhtml
+++ b/src/main/webapp/listPersons.xhtml
@@ -25,23 +25,23 @@
                  </h:column>
               <h:column>
                   <f:facet name="header">Фамилия</f:facet>
-                  <test:TruncatedOutputText value="#{discipline.lastName}" maxLength="15"/>
+                  <ifmo:TruncatedOutputText value="#{discipline.lastName}" maxLength="15"/>
               </h:column>
               <h:column>
                   <f:facet name="header">Имя</f:facet>
-                  <test:TruncatedOutputText value="#{discipline.firstName}" maxLength="15"/>
+                  <ifmo:TruncatedOutputText value="#{discipline.firstName}" maxLength="15"/>
               </h:column>
               <h:column>
                   <f:facet name="header">Отчество</f:facet>
-                  <test:TruncatedOutputText value="#{discipline.middleName}" maxLength="15"/>
+                  <ifmo:TruncatedOutputText value="#{discipline.middleName}" maxLength="15"/>
               </h:column>
               <h:column>
                   <f:facet name="header">Дисциплина</f:facet>
-                  <test:TruncatedOutputText value="#{discipline.discipline}" maxLength="15"/>
+                  <ifmo:TruncatedOutputText value="#{discipline.discipline}" maxLength="15"/>
               </h:column>
               <h:column>
                   <f:facet name="header">Описание дисциплины</f:facet>
-                  <test:TruncatedOutputText value="#{discipline.description}" maxLength="15"/>
+                  <ifmo:TruncatedOutputText value="#{discipline.description}" maxLength="15"/>
               </h:column>
 
               <h:column>
