Refactoring, inscriptions translated into Russian

--- a/src/main/webapp/editDiscipline.xhtml
+++ b/src/main/webapp/editDiscipline.xhtml
@@ -9,7 +9,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <title>Карточка человека</title>
+    <title>Редактировать описание дисциплины</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link type="text/css" rel="stylesheet" href="css/discipline.css"/>
 
@@ -22,7 +22,7 @@
 
         <h:panelGrid id="panel" columns="3" headerClass="th">
             <f:facet name="header">
-                <h:outputText value="Личные данные:"/>
+                <h:outputText value="Данные дисциплины:"/>
             </f:facet>
 
             <h:outputLabel for="lastName" value="Фамилия"/>
@@ -53,7 +53,7 @@
                          rendered="#{!editDisciplineBean.newDiscipline}" styleClass="ui-priority-primary">
             <f:param name="id" value="#{discipline.id}"/>
         </p:commandButton>
-        <p:button id="back" value="К списку" outcome="listPersons"/>
+        <p:button id="back" value="К списку" outcome="listDisciplines"/>
 
     </h:form>
 </h:body>
