--- a/src/main/webapp/listDisciplines.xhtml
+++ b/src/main/webapp/listDisciplines.xhtml
@@ -80,7 +80,7 @@
             </p:panelGrid>
 
             <f:facet name="footer">
-                Всего в первом семестре #{fn:length(listDisciplineBean.disciplinesList)} дисциплин.
+               Дисциплин в первом семестре: #{fn:length(listDisciplineBean.disciplinesList)}.
             </f:facet>
         </p:carousel>
 
