Added styles for buttons and labels

--- a/src/main/webapp/listDisciplines.xhtml
+++ b/src/main/webapp/listDisciplines.xhtml
@@ -84,7 +84,7 @@
             </f:facet>
         </p:carousel>
 
-        <p:button id="add" outcome="editDiscipline" value="Добавить"/>
+        <p:button id="add" outcome="editDiscipline" value="Добавить " styleClass="btn-primary"/>
 
         <p:separator/> <!-- displays a horizantal line; it can be styled with css -->
 
