--- a/src/main/webapp/editDiscipline.xhtml
+++ b/src/main/webapp/editDiscipline.xhtml
@@ -22,26 +22,26 @@
 
         <h:panelGrid id="panel" columns="3" headerClass="th">
             <f:facet name="header">
-                <h:outputText value="Данные дисциплины:"/>
+                <h:outputText value="Данные дисциплины:" styleClass="lbl-edit-discipline"/>
             </f:facet>
 
-            <h:outputLabel for="lastName" value="Фамилия"/>
+            <h:outputLabel for="lastName" value="Фамилия" styleClass="lbl-edit-discipline"/>
             <p:inputText id="lastName" value="#{discipline.lastName}"/>
             <p:message for="lastName" infoClass="info" errorClass="error"/>
 
-            <h:outputLabel for="firstName" value="Имя"/>
+            <h:outputLabel for="firstName" value="Имя" styleClass="lbl-edit-discipline"/>
             <p:inputText id="firstName" value="#{discipline.firstName}"/>
             <p:message for="firstName" infoClass="info" errorClass="error"/>
 
-            <h:outputLabel for="middleName" value="Отчество"/>
+            <h:outputLabel for="middleName" value="Отчество" styleClass="lbl-edit-discipline"/>
             <p:inputText id="middleName" value="#{discipline.middleName}"/>
             <p:message for="middleName" infoClass="info" errorClass="error"/>
 
-            <h:outputLabel for="discipline" value="Ведет дисциплину: "/>
+            <h:outputLabel for="discipline" value="Ведет дисциплину: " styleClass="lbl-edit-discipline"/>
             <p:inputText id="discipline" value="#{discipline.discipline}"/>
             <p:message for="discipline" infoClass="info" errorClass="error"/>
 
-            <h:outputLabel for="description" value="Описание дисциплины"/>
+            <h:outputLabel for="description" value="Описание дисциплины" styleClass="lbl-edit-discipline"/>
             <!-- counter - id of the output component to display remaining chars. -->
             <p:inputTextarea id="description" value="#{discipline.description}" counter="display" autoResize="false"
                              maxlength="30" counterTemplate="осталось символов: {0}"/>
@@ -52,12 +52,12 @@
 
         <p:growl id="growl" life="5000"/>
         <p:commandButton value="Добавить" id="add" update="growl" actionListener="#{editDisciplineBean.add}"
-                         rendered="#{editDisciplineBean.newDiscipline}" styleClass="ui-priority-primary"/>
+                         rendered="#{editDisciplineBean.newDiscipline}" styleClass="btn-primary"/>
         <p:commandButton value="Изменить" id="update" update="growl" actionListener="#{editDisciplineBean.update}"
-                         rendered="#{!editDisciplineBean.newDiscipline}" styleClass="ui-priority-primary">
+                         rendered="#{!editDisciplineBean.newDiscipline}" styleClass="btn-primary">
             <f:param name="id" value="#{discipline.id}"/>
         </p:commandButton>
-        <p:button id="back" value="К списку" outcome="listDisciplines"/>
+        <p:button id="back" value="К списку" outcome="listDisciplines" styleClass="btn-primary"/>
 
     </h:form>
 </h:body>
