Add upload and display images (need fix uploading)

--- a/src/main/webapp/editDiscipline.xhtml
+++ b/src/main/webapp/editDiscipline.xhtml
@@ -4,9 +4,9 @@
 <html lang="ru"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
     <title>Редактировать описание дисциплины</title>
@@ -47,6 +47,12 @@
                              maxlength="30" counterTemplate="осталось символов: {0}"/>
             <h:outputText id="display"/>
             <p:message for="description" infoClass="info" errorClass="error"/>
+
+            <p:fileUpload fileUploadListener="#{fileUploadView.file}" mode="advanced"
+                          update="messages" auto="true" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+            <p:commandButton value="Submit" ajax="false" update="messages" id="save-btn"
+                             actionListener="#{discipline.uploadImage}"/>
+            <p:growl id="messages" showDetail="true"/>
 
         </h:panelGrid>
 
