Changed the color of the course frames

--- a/src/main/webapp/sections/mainPage/content.xhtml
+++ b/src/main/webapp/sections/mainPage/content.xhtml
@@ -2,7 +2,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
     <div class="content-header">
-        <h1>Выберите курс</h1>
+        <h1>Выбери курс, пожалуйста:</h1>
     </div>
     <div class="content-table">
 
