Add favicon, change main page style

--- a/src/main/webapp/sections/mainPage/content.xhtml
+++ b/src/main/webapp/sections/mainPage/content.xhtml
@@ -6,27 +6,27 @@
     </div>
     <div class="content-table">
 
-        <div class="content-table-column first-course">
+        <div class="content-table-column">
             <p>I курс</p>
         </div>
 
-        <div class="content-table-column second-course">
+        <div class="content-table-column">
             <p>II курс</p>
         </div>
 
-        <div class="content-table-column third-course">
+        <div class="content-table-column">
             <p>III курс</p>
         </div>
 
-        <div class="content-table-column fourth-course">
+        <div class="content-table-column">
             <p>IV курс</p>
         </div>
 
-        <div class="content-table-column fifth-course">
+        <div class="content-table-column">
             <p>V курс</p>
         </div>
 
-        <div class="content-table-column content-table-column-last sixth-course">
+        <div class="content-table-column content-table-column-last">
             <p>VI курс</p>
         </div>
 
