--- a/src/main/webapp/sections/mainPage/header.xhtml
+++ b/src/main/webapp/sections/mainPage/header.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
-    <!-- удалить его, заменив headerom для каждой из страниц-->
-    <h1>Добро пожаловать в систему, абитуриент.</h1>
+
+    <img src="#{facesContext.externalContext.requestContextPath}/resources/img/itmo.png" alt="Mountain View" style="width:308px;height:74px;"> </img>
+    <!--<h1>Добро пожаловать в систему, абитуриент.</h1>-->
 
 </ui:composition>
