--- a/src/main/webapp/sections/mainPage/footer.xhtml
+++ b/src/main/webapp/sections/mainPage/footer.xhtml
@@ -1,14 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
-    <p>Posted by:
-        <a href="https://github.com/seductorAmadeus">
-            seductorAmadeus
-        </a>
-    </p>
-    <p>Contact information:
-        <a href="mailto:seductorAmadeus@gmail.com">
-            seductorAmadeus@gmail.com
-        </a>
+    <p>
+        Разработано персоналом кафедры Вычислительной техники
     </p>
 </ui:composition>
