Added a preview of the editDisciplines page; refactoring

--- a/src/main/webapp/sections/common/footer.xhtml
+++ b/src/main/webapp/sections/common/footer.xhtml
@@ -2,6 +2,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
     <p>
-        Разработано персоналом кафедры Вычислительной техники
+        Разработано на кафедре
+       <a href="http://cse.ifmo.ru/ru/">Вычислительной техники</a>
     </p>
 </ui:composition>
