--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@
     </ui:define>
 
     <ui:define name="footer">
-        <ui:include src="/sections/mainPage/footer.xhtml"/>
+        <ui:include src="/sections/common/footer.xhtml"/>
     </ui:define>
 
 </ui:composition>
