--- a/src/main/webapp/sections/editDisciplines/content.xhtml
+++ b/src/main/webapp/sections/editDisciplines/content.xhtml
@@ -10,6 +10,7 @@
         <c:set var="discipline" value="#{editDisciplineBean.discipline}"/>
         <h:panelGrid columns="2" style="width:100%;">
             <h:panelGrid id="dataPanel" style="width: 50%" columns="2">
+
                 <f:facet name="header">
                     <h:outputText value="Панель регистрации" styleClass="header"/>
                 </f:facet>
@@ -37,6 +38,9 @@
                 </p:inputText>
                 <p:message for="middleName" infoClass="info" errorClass="error"/>
                 <h:outputText value="#{validationView.text}"/>
+
+                <h:outputLabel for="minMax" value="Выберите курс: " />
+                <p:spinner id="minMax" value="#{discipline.courseNumber}" min="1" max="6" />
 
                 <h:outputLabel for="discipline" value="Ведет дисциплину: " styleClass="lbl-edit-discipline"/>
                 <p:inputText id="discipline" value="#{discipline.discipline}" required="true">
@@ -70,6 +74,7 @@
                 <h:outputText value="#{validationView.text}"/>
             </h:panelGrid>
         </h:panelGrid>
+
         <p:growl id="growl" life="5000"/>
         <p:commandButton value="Добавить" id="add" update="growl" actionListener="#{editDisciplineBean.add}"
                          rendered="#{editDisciplineBean.newDiscipline}" styleClass="btn-primary"/>
