Add new page, refactoring

--- a/src/main/webapp/sections/editDisciplines/content.xhtml
+++ b/src/main/webapp/sections/editDisciplines/content.xhtml
@@ -65,13 +65,13 @@
 
             </h:panelGrid>
             <h:panelGrid id="infoPanel" style="width: 50%" columns="2">
-                <h:outputLabel for="lastName1" value="Фамилия" styleClass="lbl-edit-discipline"/>
-                <p:inputText id="lastName1" value="#{discipline.lastName}" required="true">
-                    <f:validateLength minimum="4" maximum="20"/>
-                    <p:clientValidator/>
-                </p:inputText>
-                <p:message for="lastName1" infoClass="info" errorClass="error"/>
-                <h:outputText value="#{validationView.text}"/>
+                <!--<h:outputLabel for="lastName1" value="Фамилия" styleClass="lbl-edit-discipline"/>-->
+                <!--<p:inputText id="lastName1" value="#{discipline.lastName}" required="true">-->
+                    <!--<f:validateLength minimum="4" maximum="20"/>-->
+                    <!--<p:clientValidator/>-->
+                <!--</p:inputText>-->
+                <!--<p:message for="lastName1" infoClass="info" errorClass="error"/>-->
+                <!--<h:outputText value="#{validationView.text}"/>-->
             </h:panelGrid>
         </h:panelGrid>
 
